mymistakes
1. Failed to add comma "," after the string is closed by double quotes

[ashok@mydevel python-scripts]$ python ex3.py 
  File "ex3.py", line 24
    print "Is it less or equal?" 5 <= -2
                                 ^
SyntaxError: invalid syntax

Answer: print "Is it less or equal?", 5 <= -2


2. Cannot have strings with multiple lines

 [ashok@mydevel python-scripts]$ python myex1.py 
  File "myex1.py", line 1
    print "Of the Numbers below which is greater 
                                                ^
SyntaxError: EOL while scanning string literal

Code:

print "Of the Numbers below which is greater
        382, 4972, 18, 59585, 750 "


3.  Using undefined variables

Traceback (most recent call last):
  File "ex4.py", line 14, in <module>
    print "There will be", car_not_driven, "empty cars today"
NameError: name 'car_not_driven' is not defined

4. String when not used with single quotes or double quotes causes the string to be used as variable . 

Traceback (most recent call last):
  File "myex3.py", line 7, in <module>
    print "%s has borrowed %d amount from the bank" % (Ramesh, 4000)
NameError: name 'Ramesh' is not defined

In the above program Ramesh variable is not defined, and if have to use string we should be using like below:

print "%s has borrowed %d amount from the bank", % ('Ramesh', 4000)

